Update focus on hamburger menu

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -283,7 +283,7 @@ section,
 }
 
 .primary-navigation__toggle:focus {
-  outline: 1px solid var(--clr-primary-forest);
+  outline: none;
 }
 
 /* Hamburger icon */
