Add filter to config
Filtering out and in intro episode as needed

--- a/src/_includes/recent-episodes.njk
+++ b/src/_includes/recent-episodes.njk
@@ -1,4 +1,4 @@
-{%- for episode in collections.episode | reverse -%}
+{%- for episode in collections.episode | excludeIntroByTag | reverse -%}
     <div class="recent-episodes--cards">
       <img src="https://fakeimg.pl/500x500" alt="{{ episode.data.title }}" />
         <span>EPISODE {{ episode.data.episodeNumber }}</span>
