--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -379,6 +379,10 @@ section,
       grid-area: contact;
     }
 
+    .primary-header div:last-child svg {
+      fill: var(--clr-primary-forest);
+    }
+
 .primary-header div p {
   letter-spacing: var(--letter-spacing);
   line-height: 1.6;
@@ -811,7 +815,7 @@ footer {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(min(225px, 100%), 1fr));
-  margin-block: 1.5rem;
+  margin-block: 1.5rem 2.5rem;
   color: var(--clr-primary-blush)
 }
 
@@ -830,6 +834,15 @@ footer {
 
 .recent-episodes--cards h3 {
   font-size: var(--fs-700);
+}
+
+.recent-episodes--cards h3 a {
+  text-decoration: none;
+  color: var(--clr-primary-blush);
+}
+
+.recent-episodes--cards h3 a:hover, .recent-episodes--cards h3 a:focus {
+  text-decoration: underline;
 }
 
 .recent-episodes--cards span {
@@ -1164,109 +1177,66 @@ textarea {
 }
 
 /* //////////////////////
-  Article snippets
+  Episode Page
   /////////////////////// */
 
-.snippet {
-  display: grid;
-  gap: 1em;
-  grid-template-areas:
-    "image"
-    "title"
-    "meta"
-    "body"
-    "button";
+.episode-header {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  padding-block: 1.5rem 3rem;
 }
 
-.snippet__image {
-  grid-area: image;
+.episode-header__media {
+  width: 200px;
+  flex: 1;
+}
+
+.episode-header__meta {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.episode-header__details {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  color: var(--clr-primary-forest);
+}
+
+.episode-header__meta audio {
   width: 100%;
-  aspect-ratio: 4 / 3;
-  object-fit: cover;
-}
-.snippet__title {
-  grid-area: title;
-}
-.snippet__meta {
-  grid-area: meta;
-  color: var(--clr-neutral-300);
 }
 
-.snippet__meta span {
-  color: var(--clr-neutral-900);
+.episode-header__meta h1 {
+  padding-block: 0 1rem;
+  color: var(--clr-primary-blush);
 }
 
-.snippet .btn {
-  grid-area: button;
+.episode-header__share {
+  display: flex;
+  gap: 0.5rem;
+  padding-block: 1rem 0;
 }
 
-.snippet__title {
-  color: var(--clr-neutral-900);
-  font-size: var(--fs-500);
+.episode-header__meta svg {
+  width: 32px;
+  height: 32px;
+  fill: var(--clr-primary-forest);
 }
 
-.snippet__title a {
-  color: inherit;
+.episode-header__meta a {
   text-decoration: none;
 }
 
-.snippet__title a:hover,
-.snippet__title a:focus {
-  color: var(--clr-primary-500);
-} 
-
-@media (min-width: 45em) {
-  .snippet {
-    grid-template-areas:
-      "title image"
-      "meta image"
-      "body image"
-      "button image";
-    grid-column-gap: 4em;
-    grid-template-columns: 1fr 40%;
-    grid-template-rows: min-content min-content min-content 1fr;
-  }
+.episode-header__details svg {
+  width: 16px;
+  height: 16px;
 }
 
-.btn {
-  cursor: pointer;
-  text-decoration: none;
-  display: inline-block;
-  line-height: 1;
-  padding: 0.75em 1.75em;
-  border-radius: 0.25em;
-  align-self: start;
-  justify-self: start;
-}
-
-.btn:focus {
-  outline: 0.125em solid var(--clr-secondary-olive);
-  outline-offset: 0.25em;
-}
-
-.btn--primary {
-  background: var(--clr-secondary-olive);
-  color: var(--clr-neutral-100);
-  font-weight: var(--fw-700);
-  border: 2px solid var(--clr-secondary-olive);
-}
-.btn--primary:hover,
-.btn--primary:focus {
-  background: var(--clr-primary-500);
-  border-color: var(--clr-primary-500); 
-}
-
-.btn--neutral {
-  background-color: var(--clr-neutral-100);
-  color: var(--clr-neutral-900);
-  font-weight: var(--fw-700);
-  border: 2px solid var(--clr-neutral-900);
-}
-
-.btn--neutral:hover,
-.btn--neutral:focus {
-  color: var(--clr-neutral-100);
-  background-color: var(--clr-neutral-900);
+.episode-content {
+  padding-block: 2rem;
 }
 
 @media (min-width: 992px) {
