--- a/src/_includes/recent-episodes.njk
+++ b/src/_includes/recent-episodes.njk
@@ -2,6 +2,10 @@
     <div class="recent-episodes--cards">
       <img src="https://fakeimg.pl/500x500" alt="{{ episode.data.title }}" />
         <span>EPISODE {{ episode.data.episodeNumber }}</span>
-      <h3>{{ episode.data.title }}</h3>
+          <h3>
+            <a href="{{ episode.url }}">
+              {{ episode.data.title }}
+            </a>
+          </h3>
     </div>
 {%- endfor -%}
