--- a/src/index.njk
+++ b/src/index.njk
@@ -138,7 +138,7 @@ layout: 'base.njk'
   </div>
 </section>
 <section class="guest-contact-section bg-lazy-image">
-  <div class="guest-contact">
+  <div id="contact" class="guest-contact">
     <h2>Be a Guest on the Podcast!</h2>
     <p>Do you have a story of God’s grace to share? Are you passionate about faith-filled living, relationships, personal growth, or Catholic life? I’d love to hear from you!</p>
     <div class="form-container">
