Adjust sitewide link color

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,6 +116,10 @@ a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
+a {
+  color: var(--clr-primary-blush);
+}
+
 /* Make images easier to work with */
 img,
 picture {
