--- a/src/_includes/episode.njk
+++ b/src/_includes/episode.njk
@@ -6,7 +6,7 @@ layout: 'base.njk'
     <div class="episode-header">
         <div class="episode-header__media">
             <figure class="episode-header__image">
-                <img src="{{ image }}" alt="{{ imageAlt }} " loading="eager">
+                <img src="{{ image }}" alt="Cover art for episode {{ title }} " loading="eager">
             </figure>
                 
             </div>
