--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -692,7 +692,7 @@ footer {
   padding-bottom: .75rem;
   font-size: var(--fs-500);
   font-weight: var(--fw-400);
-  color: var(--clr-secondary-lace);
+  color: var(--clr-primary-blush);
   text-transform: uppercase;
   font-family: var(--ff-body);
 }
@@ -700,6 +700,7 @@ footer {
 .podcast-icons svg {
   width: 40px;
   height: 40px;
+  fill: var(--clr-primary-forest);
 }
 
 .featured-episode {
