--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -768,7 +768,7 @@ footer {
 }
 
 .host-profile--background {
-  background-image: url('/assets/episodes/pexels-dudubangbang-30791001.jpg');
+  background-image: url('/assets/stock/beautiful-calla-flowers-on-brown-background-2024-09-25-06-01-50-utc.png');
   background-attachment: scroll;
   background-size: cover;
   background-repeat: no-repeat;
@@ -881,18 +881,23 @@ footer {
 
 /* Add open quote mark using ::before */
 .open-quote::before {
-  content: open-quote;
-  /* Open quote mark */
+  content: '';
   position: absolute;
   top: 0;
   left: 45%;
   font-size: 5rem;
+  width: 50px;
+  height: 50px;
   color: var(--clr-primary-forest);
   z-index: 1;
-  background-color: #fff;
+  background-color: var(--clr-white);
   padding: 0 1rem;
   line-height: 1;
   background-color: white;
+  background-image: url('/assets/icons/Quotes.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .slider {
@@ -1076,25 +1081,12 @@ footer {
 
 /* Parallax section with fixed background */
 .guest-contact-section {
-  background-image: url('/assets/anthony-delanoix-urUdKCxsTUI-unsplash.jpg');
+  background-image: url('/assets/stock/leaf-shadow-on-pastel-background-creative-abstrac-2023-11-27-05-36-59-utc.jpg');
   background-attachment: scroll;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-}
-
-/* Ensure the fixed background doesn’t interfere with content */
-.guest-contact-section::before {
-    content: '';
-      position: absolute;
-      inset: 0 auto auto 0;
-      width: 100%;
-      height: 100%;
-      background-color: lightgray;
-      opacity: 0.8;
-      z-index: 1;
-  /* Below the content but above the image */
 }
 
 /* Optional: Overlay a clickable area to ensure the link works */
