--- a/src/index.njk
+++ b/src/index.njk
@@ -121,20 +121,12 @@ layout: 'base.njk'
     <div class="testimonial-slider">
       <ul class="slider">
         <li>
-            <div>"This podcast changed my perspective on grace—highly recommend!"</div>
-            <p>Jane Doe, Listener</p>
+            <div>"Sometimes it's hard for me to see God's hand in everything in my life and to "count it all joy", but Kara discussing her own faith journey helps me to feel seen and to remember that God is in every moment of everyday."</div>
+            <p>Crystal G.</p>
           </li>
           <li>
-            <div>"This podcast changed my perspective on grace—highly recommend!"</div>
-            <p>Jane Doe, Listener</p>
-          </li>
-          <li>
-            <div>"Kara’s insights are inspiring and thought-provoking."</div>
-            <p>John Smith, Subscriber</p>
-          </li>
-          <li>
-            <div>"A beautiful blend of faith and life lessons—love this show!"</div>
-            <p>Sarah Johnson, Fan</p>
+            <div>"Kara is like your BFF in faith, guiding you with warmth, wisdom and authenticity to discover God’s presence and purpose in every part of your journey."</div>
+            <p>Chelsea Q.</p>
           </li>
         </ul>  
     </div>
