--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -574,6 +574,7 @@ footer {
   background-color: var(--clr-secondary-olive);
   color: var(--clr-primary-forest);
   text-align: center;
+  font-size: var(--fs-small);
 }
 
 /* //////////////////////
@@ -940,8 +941,9 @@ footer {
 
 .slider div {
   margin-inline: auto;
-  font-size: var(--fs-600);
+  font-size: var(--fs-500);
   text-align: center;
+  max-width: 750px;
 }
 
 /* Style the buttons to hide text and position arrows */
@@ -1145,7 +1147,7 @@ form {
 
 label {
   display: block;
-  margin-bottom: 0.5rem;
+  visibility: hidden;;
   font-weight: bold;
   color: var(--clr-primary-blush)
 }
