--- a/src/admin/preview-style.css
+++ b/src/admin/preview-style.css
@@ -114,7 +114,7 @@ h5,
 h6 {
     font-family: var(--ff-heading), sans-serif;
     /* Star Wars style for headings */
-    color: #333;
+    color: var(--clr-primary-forest);
 }
 
 p {
