Add image front matter

--- a/src/_includes/recent-episodes.njk
+++ b/src/_includes/recent-episodes.njk
@@ -1,6 +1,6 @@
 {%- for episode in collections.episode | excludeIntroByTag | reverse -%}
     <div class="recent-episodes--cards">
-      <img src="https://fakeimg.pl/500x500" alt="{{ episode.data.title }}" />
+      <img src="{{ episode.data.image }}" alt="{{ episode.data.title }}" />
         <span>EPISODE {{ episode.data.episodeNumber }}</span>
           <h3>
             <a href="{{ episode.url }}">
