--- a/src/_includes/baseheader.njk
+++ b/src/_includes/baseheader.njk
@@ -10,13 +10,13 @@
             </a>
         </div>
         <ul class="primary-navigation">
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#meet-kara">MEET KARA</a></li>
-            <li><a href="#experience">EXPERIENCE</a></li>
-            <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li><a href="#blog">BLOG</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-            <li><a href="#podcast">PODCAST</a></li>
+            <li><a href="/">HOME</a></li>
+            <li><a href="https://karalorynphotography.com/meet-kara">MEET KARA</a></li>
+            <li><a href="https://karalorynphotography.com/the-experience">EXPERIENCE</a></li>
+            <li><a href="https://karalorynphotography.com/portfolio">PORTFOLIO</a></li>
+            <li><a href="https://karalorynphotography.com/blog/">BLOG</a></li>
+            <li><a href="https://karalorynphotography.com/contact">CONTACT</a></li>
+            <li><a href="/">PODCAST</a></li>
             <li>
                 <a role="button" href="#contact" target="_self">INQUIRE &rarr;</a>
                 <div>
