Update meta data

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
         <title>{{ title | default("Everything is Grace Podcast") }} | Everything is Grace Podcast</title>
         {% metagen 
-            title=title,
+            title=title + ' | Everythng is Grace Podcast',
             desc=description,
             url='https://karalorynlilly.com' + page.url,
             img=image,
