--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,6 @@
 ---
 layout: 'base.njk'
+title: 'Kara Loryn Lilly'
 image: '/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0005.jpg'
 description: 'Everything is Grace podcast explores God’s grace in life’s joys, struggles, and quiet moments—faith, relationships, culture, and growth, with Kara Lilly.'
 ---
