--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1188,6 +1188,7 @@ textarea {
   display: flex;
   gap: 0.5rem;
   align-items: center;
+  flex-wrap: wrap;
   color: var(--clr-primary-forest);
 }
 
