--- a/src/index.njk
+++ b/src/index.njk
@@ -105,11 +105,6 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
   </div>
 </section>
 <section>
-  <h2 class="recent-episodes-heading ">RECENT EPISODES</h2>
-  <div class="recent-episodes">
-    {% include "recent-episodes.njk" %}
-  </div>
-  <!--
   {% if collections.episode and collections.episode.length > 8 %}
     <section>
       <h2 class="recent-episodes-heading ">RECENT EPISODES</h2>
@@ -117,7 +112,7 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
         {% include "recent-episodes.njk" %}
       </div>
     </section>
-  {% endif %} -->
+  {% endif %}
 </section>
 <section class="px-0 open-quote">
   <div class="testimonials">
