Add Plausible script

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,6 +8,7 @@
         <script src="/scripts/main.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" rel="dns-prefetch" />
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
+        <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>
         <title>{{ title | default("Everything is Grace Podcast") }} | Everything is Grace Podcast</title>
         {% metagen 
             title=title + ' | Everythng is Grace Podcast',
