--- a/src/_includes/basefooter.njk
+++ b/src/_includes/basefooter.njk
@@ -2,7 +2,7 @@
     <div class="footer-container">
         <div class="footer__cta">
             <div>
-                <p>EXCLUSE NEWS AND UPDATES</p>
+                <p>EXCLUSIVE NEWS AND UPDATES</p>
                 <a href="https://karalorynphotography.com/email-list" role="button">JOIN MY EMAIL LIST</a>
             </div>
             <div>
