--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 :root {
   --fs-small: 0.75rem;
   --fs-default: 1rem;
+  --fs-medium: 1.5rem;
   --fs-300: 0.9375rem;
   --fs-400: 1.0625rem;
   --fs-500: 1.375rem;
@@ -590,7 +591,7 @@ button:disabled,
   text-decoration: none;
 }
 .footer__cta img {
-  width: 300px;
+  width: 400px;
 }
 
 .footer__cta p {
@@ -756,7 +757,7 @@ button:disabled,
   gap: 0.5rem;
   grid-template-areas: "number number" "title play";
   grid-template-columns: auto;
-  padding: 3rem 0;
+  padding: 1.25rem 0;
   border-top: 1px solid var(--clr-primary-blush);
   border-bottom: px solid var(--clr-primary-blush);
   justify-content: space-between;
@@ -862,7 +863,7 @@ button:disabled,
 }
 
 .recent-episodes--cards h3 {
-  font-size: var(--fs-700);
+  font-size: var(--fs-medium);
 }
 
 .recent-episodes--cards h3 a {
@@ -875,7 +876,7 @@ button:disabled,
 }
 
 .recent-episodes--cards span {
-  font-size: 1.25rem;
+  font-size: var(--fs-default);
   text-transform: uppercase;
   color: var(--clr-primary-forest)
 }
@@ -1122,7 +1123,7 @@ button:disabled,
   display: flex;
   gap: 0.5rem;
   justify-content: center;
-  font-size: 1rem;
+  font-size: var(--fs-default);
   padding-block: 0.5rem 0;
   text-transform: uppercase;
 }
@@ -1272,6 +1273,13 @@ section, .section {
 
 .footer-container {
   padding: min(10vh, 4rem) 1.5rem 0 1.5rem;
+}
+
+.footer__cta div:is(:first-child, :last-child) {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .footer__cta div:first-child {
