--- a/src/_includes/baseheader.njk
+++ b/src/_includes/baseheader.njk
@@ -9,7 +9,7 @@
             </a>
         </div>
         <ul class="primary-navigation">
-            <li><a href="/">HOME</a></li>
+            <li><a href="https://karalorynphotography.com">HOME</a></li>
             <li><a href="https://karalorynphotography.com/meet-kara">MEET KARA</a></li>
             <li><a href="https://karalorynphotography.com/the-experience">EXPERIENCE</a></li>
             <li><a href="https://karalorynphotography.com/portfolio">PORTFOLIO</a></li>
