Add margin class

--- a/src/index.njk
+++ b/src/index.njk
@@ -89,7 +89,7 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
     </div>
   </div>
 </section>
-<section class="host-profile--background bg-lazy-image ">
+<section class="host-profile--background bg-lazy-image mb-small-2">
   <div class="host-profile">
     <div>
       <img src="/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0018.jpg" alt="Kara Lilly" />
