Improve page loading
Add preload attribute to main stylesheet; remove link to a11y slider and moved to project locally; add defer to site script

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="preload" href="/styles/style.css" as="style">
+        <link rel="stylesheet" href="/styles/slider.css">
+        <script defer src="/scripts/main.js"></script>
         <link rel="stylesheet" href="/styles/style.css">
-        <script src="/scripts/main.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" rel="dns-prefetch" />
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
         <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>
         <title>{{ title | default("Everything is Grace Podcast") }} | Everything is Grace Podcast</title>
