--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,7 +11,7 @@
         <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>
         <title>{{ title | default("Everything is Grace Podcast") }} | Everything is Grace Podcast</title>
         {% metagen 
-            title=title + ' | Everythng is Grace Podcast',
+            title=title + ' | Everything is Grace Podcast',
             desc=description,
             url='https://karalorynlilly.com' + page.url,
             img=image,
