--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
         <script src="/scripts/main.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" rel="dns-prefetch" />
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
-        <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>
+        <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>  <link rel="preload" href="/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0005.jpg" as="image" fetchpriority="high">
         <title>{{ title | default("Everything is Grace Podcast") }} | Everything is Grace Podcast</title>
         {% metagen 
             title=title + ' | Everything is Grace Podcast',
