--- a/src/_includes/partials/episode.njk
+++ b/src/_includes/partials/episode.njk
@@ -39,6 +39,6 @@ layout: 'base.njk'
     </div>
     <h2>Latest Episodes</h2>
     <div class="recent-episodes">
-        {% include "recent-episodes.njk" %}
+        {% include "partials/recent-episodes.njk" %}
     </div>
 </section>
