--- a/src/index.njk
+++ b/src/index.njk
@@ -120,7 +120,7 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
     <section>
       <h2 class="recent-episodes-heading ">RECENT EPISODES</h2>
       <div class="recent-episodes">
-        {% include "recent-episodes.njk" %}
+        {% include "partials/recent-episodes.njk" %}
       </div>
     </section>
   {% endif %}
