Replace bot text

--- a/src/index.njk
+++ b/src/index.njk
@@ -136,7 +136,7 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
       <div class="form-group" method="POST" name="contact">
             <div class="sr-only">
               <label>
-                Don’t fill this out if you’re human: 
+                Enter your phone number (optional):
                 <input name="bot-field" />
               </label>
             </div>
