Adjust width of hero image

--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ description: 'Everything is Grace podcast explores God’s grace in life’s joy
   <img src="/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0005.jpg" alt="Kara Lilly Podcast" class="hero-image" loading="eager" fetchpriority="high">
   <div class="hero-content">
     <h1 class="sr-only">Everything is Grace Podcast</h1>
-    <img loading="eager" src="/assets/logo/EIG_LOGO_PrimaryVertical_V2-Brown.svg" alt="Everything is Grace Podcast Logo" class="hero-logo">
+    <img class="hero-logo" loading="eager" src="/assets/logo/EIG_LOGO_PrimaryVertical_V2-Brown.svg" alt="Everything is Grace Podcast Logo">
   </div>
 </section>
 <section>
