--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -586,6 +586,10 @@ button:disabled,
   padding: 0;
 }
 
+.hero-image {
+  width: 100%;
+}
+
 /* Center the logo over the hero image */
 .hero-content {
   position: absolute;
