add clarity script

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,7 +9,15 @@
         <script defer src="/scripts/main.js"></script>
         <link rel="stylesheet" href="/styles/style.css">
         <link rel="icon" type="image/x-icon" href="/assets/logo/klp_favicon.png">
-        <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>  <link rel="preload" href="/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0005.jpg" as="image" fetchpriority="high">
+        <script defer data-domain="karalorynlilly.com" src="https://plausible.io/js/script.file-downloads.outbound-links.js"></script>
+        <script type="text/javascript">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "t25ph5brf3");
+        </script>  
+        <link rel="preload" href="/assets/headshots/Everything-is-Grace-Podcast-Kara-Loryn-Lilly-0005.jpg" as="image" fetchpriority="high">
         <title>{{ title | default("Everything is Grace Podcast") }} | Everything is Grace Podcast</title>
         {% metagen 
             title=title + ' | Everything is Grace Podcast',
